--- a/.github/workflows/android_OTA_make.yml
+++ b/.github/workflows/android_OTA_make.yml
@@ -23,7 +23,7 @@ jobs:
         mkdir final-rom
         mkdir final
         sudo -E apt-get update
-        sudo -E apt-get install wget python python-pip python3 python3-pip
+        sudo -E apt-get install wget python python3 python3-pip
         pip3 install setuptools
         pip3 install bsdiff4
         
